Fix state nav spacing issue and add shadow to menu

--- a/src/styles/components/Header.scss
+++ b/src/styles/components/Header.scss
@@ -64,6 +64,7 @@
   &-states-nav {
     align-items: center;
     background-color: #ffffff;
+    box-shadow: 0 2px 2px $dark-gray;
     display: none;
     justify-content: space-around;
     padding: 0.5rem;
@@ -113,7 +114,7 @@
 
     a {
       display: inline-block;
-      width: 100%;
+      width: calc(100% - 1rem);
     }
   }
 }
